ci: spotless